# AutoTest

./: CMakeLists.txt  hello_test.cc
inc/: hello.h
src/: hello.cpp  main.cpp
